jenkins/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
spec:
  type: NodePort
  ports:
  - name: jenkins-web
    port: 80
    targetPort: 8080
  selector:
    app: jenkins
