jenkins/jenkins-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: jenkins/jenkins:lts
        ports:
        - containerPort: 9090
        volumeMounts:
          - name: jenkins-home
            mountPath: /var/lib/jenkins
      volumes:
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: jenkins-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-web
spec:
  selector:
    app: jenkins
  ports:
  - name: j-web
    port: 80
    targetPort: 9090
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-web
spec:
  rules:
  - host: jenkins.rancher.rafaprogrammer.com.br
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins-web
          servicePort: 80
